
v. 0.0.8 -

v. 0.0.7 - 2018.06.13
  1) Added "Hide icon/Show in tray" feature.
  2) The scripting examples are substantially revised.  Added "Expect"
     and "Expect+Tk" scripts, as well as examples of using "gtkdialog"
     or "Xdialog" instead of "qarma"/"zenity".
  3) Added "Show anyway" feature.  Changed "Settings" dialog.
  4) Modified format of "Hidden devices" field in "Settings" dialog.
  5) Installation is simplified.  ".pro" and ".ebuild" files changed.
  6) Added and updated documentation in accordance with paragraphs 1-5.
  7) Refactoring, small enhancement, and noncritical errors fixes.

v. 0.0.6 - 2017.10.13
  1) Added Unix signal handling and correct termination on TERM, HUP,
     INT, QUIT signals.
  2) Added control (show menus) by SIGUSR1 and SIGUSR2 signals.
  3) Added "work without system tray" feature and appropriate command
     line option.
  4) Updated documentation in accordance with paragraphs 1-3.
  5) Refactoring and regression fixes.

v. 0.0.5 - 2017.08.13
  1) Added "Supplementary menu" feature with "Eject" and "Remove" items.
  2) Added "Autoeject" setting.
  3) Added "Show output on success" feature and corresponding settings
     for every command and "Auto..." setting.
  4) Added examples of "Remove" action implementation via
     util-linux/eject and via '/sys/.../remove' write.
  5) Added setting of "TMOUNT_*" environment variables.
  6) Added and updated documentation in accordance with paragraphs 1-5.
  7) Refactoring and regression fixes.

v. 0.0.4 - 2017.06.13
  1) Added a separate setting for the "Add image" action.
  2) Separate timeout settings for all actions are added.
  3) Examples of using the "cryptsetup" with "sudo" are added.
  4) Added support for LUKS containers in the regular files.
  5) Added support for "cryptsetup" --key-file (and "pmount" -p) option.
  6) Documentation fixed.
  7) Minor fixes and refactoring.

v. 0.0.3 - 2017.05.13
  1) Added support for mounting of filesistem images.