@@ -1,5 +1,7 @@
 
 v. 0.0.8 -
+  1) Улучшена синхронизация конфигурационного файла.
+  2) Изменён способ показа сообщения "Устройства не найдены".
 
 v. 0.0.7 - 2018.06.13
   1) Добавлена возможность "Скрыть иконку/Показать в лотке".
