@@ -1,5 +1,7 @@
 
 v. 0.0.8 -
+  1) Enhanced config file synchronization.
+  2) Changed the method of displaying the message "Devices not found."
 
 v. 0.0.7 - 2018.06.13
   1) Added "Hide icon/Show in tray" feature.
